--- a/Food Court Management System/Food Court Management System.csproj
+++ b/Food Court Management System/Food Court Management System.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\EntityFramework.6.5.1\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.props')" />
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -45,10 +46,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.5.1\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.5.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -120,10 +129,94 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CustomerDashboardController.cs" />
+    <Compile Include="Controllers\EmployeeManagementController.cs" />
+    <Compile Include="Controllers\FoodMenuController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\OrderManagementController.cs" />
+    <Compile Include="Controllers\RestaurantDashboardController.cs" />
+    <Compile Include="Controllers\RestaurantProfileController.cs" />
+    <Compile Include="DBContext\Cart.cs">
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\Cart_FoodItem.cs">
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\Coupon.cs">
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\Customer.cs">
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\Customer_GiftCard_Use.cs">
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\Employee.cs">
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\FoodCourtManagementSystemDB.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FoodCourtManagementSystemDB.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\FoodCourtManagementSystemDB.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\FoodCourtManagementSystemDB.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FoodCourtManagementSystemDB.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\FoodItem.cs">
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\GiftCard.cs">
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\Order.cs">
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\Order_FoodItem.cs">
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\Restaurant.cs">
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\Restaurant_FoodItem.cs">
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\Transaction.cs">
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DBContext\Wallet.cs">
+      <DependentUpon>FoodCourtManagementSystemDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CartModel.cs" />
+    <Compile Include="Models\Cart_FoodItemModel.cs" />
+    <Compile Include="Models\CouponModel.cs" />
+    <Compile Include="Models\CustomerModel.cs" />
+    <Compile Include="Models\Customer_GiftCard_UseModel.cs" />
+    <Compile Include="Models\EmployeeManagementViewModel.cs" />
+    <Compile Include="Models\EmployeeModel.cs" />
+    <Compile Include="Models\FoodItemModel.cs" />
+    <Compile Include="Models\FoodMenuViewModel.cs" />
+    <Compile Include="Models\GiftCardModel.cs" />
+    <Compile Include="Models\LoginViewModel.cs" />
+    <Compile Include="Models\OrderManagementViewModel.cs" />
+    <Compile Include="Models\OrderModel.cs" />
+    <Compile Include="Models\Order_FoodItemModel.cs" />
+    <Compile Include="Models\RestaurantDashboardViewModel.cs" />
+    <Compile Include="Models\RestaurantModel.cs" />
+    <Compile Include="Models\RestaurantProfileViewModel.cs" />
+    <Compile Include="Models\Restaurant_FoodItemModel.cs" />
+    <Compile Include="Models\TransactionModel.cs" />
+    <Compile Include="Models\WalletModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -143,6 +236,23 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\CSS\CustomerDashboard.css" />
+    <Content Include="Content\CSS\EmployeeManagement.css" />
+    <Content Include="Content\CSS\FoodMenuManagement.css" />
+    <Content Include="Content\CSS\Login.css" />
+    <Content Include="Content\CSS\OrderManagement.css" />
+    <Content Include="Content\CSS\RestaurantProfile.css" />
+    <Content Include="Content\CSS\RestaurantDashboard.css" />
+    <Content Include="DBContext\FoodCourtManagementSystemDB.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FoodCourtManagementSystemDB.edmx</DependentUpon>
+      <LastGenOutput>FoodCourtManagementSystemDB.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DBContext\FoodCourtManagementSystemDB.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FoodCourtManagementSystemDB.edmx</DependentUpon>
+      <LastGenOutput>FoodCourtManagementSystemDB.cs</LastGenOutput>
+    </Content>
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -152,6 +262,13 @@
     <Content Include="Scripts\bootstrap.esm.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <EntityDeploy Include="DBContext\FoodCourtManagementSystemDB.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>FoodCourtManagementSystemDB.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="DBContext\FoodCourtManagementSystemDB.edmx.diagram">
+      <DependentUpon>FoodCourtManagementSystemDB.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
@@ -177,10 +294,16 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\CustomerDashboard\CustomerDashboard.cshtml" />
+    <Content Include="Views\RestaurantDashboard\RestaurantDashboard.cshtml" />
+    <Content Include="Views\RestaurantProfile\RestaurantProfile.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\EmployeeManagement\Index.cshtml" />
+    <Content Include="Views\FoodMenu\Index.cshtml" />
+    <Content Include="Views\OrderManagement\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
@@ -208,6 +331,9 @@
     <Content Include="Scripts\bootstrap.bundle.js.map" />
     <Content Include="Scripts\jquery-3.7.0.slim.min.map" />
     <Content Include="Scripts\jquery-3.7.0.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -242,7 +368,10 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.5.1\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.5.1\build\EntityFramework.targets'))" />
   </Target>
+  <Import Project="..\packages\EntityFramework.6.5.1\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
